<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- BotNav -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomBarCard"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#FFFFFFFF"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#F3F4F8"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <ImageButton
                android:id="@+id/beranda_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/home"
                android:scaleType="centerInside"
                android:contentDescription="@string/beranda"
                android:padding="0dp"
                app:tint="@color/bottom_nav_selector" />

            <ImageButton
                android:id="@+id/pesanan_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/pesanan"
                android:scaleType="centerInside"
                android:contentDescription="@string/pesanan"
                android:padding="0dp"
                app:tint="@color/bottom_nav_selector" />

            <ImageButton
                android:id="@+id/profil_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/profil"
                android:scaleType="centerInside"
                android:contentDescription="@string/profil"
                android:padding="0dp"
                app:tint="@color/bottom_nav_selector" />

            <ImageButton
                android:id="@+id/pusatbantuan_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/pusatbantuan"
                android:scaleType="centerInside"
                android:contentDescription="@string/pusatbantuan"
                android:padding="0dp"
                app:tint="@color/bottom_nav_selector" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>