<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/default_margin_top"
    tools:context=".client.ui.detailProduk.DetailProdukFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top Bar -->
        <FrameLayout
            android:id="@+id/header_container"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/header_layout"
                layout="@layout/fragment_header" />
        </FrameLayout>

        <!-- Image Product -->
        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container" />

        <!-- Product Name -->
        <TextView
            android:id="@+id/nama_produk"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_produk"
            android:layout_marginTop="18dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintTop_toBottomOf="@id/banner_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Product Price -->
        <TextView
            android:id="@+id/harga_produk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/harga_produk"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nama_produk" />

        <!-- Add to Cart Button -->
        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:text="@string/add_to_cart"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/Secondary_1"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/harga_produk" />

        <View
            android:id="@+id/divider_line"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart" />

        <!-- Rating -->
        <FrameLayout
            android:id="@+id/rating"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Star Icon -->
                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/desc_star_icon"
                    android:src="@drawable/star_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Rating Text -->
                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/rating_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_bold"
                    app:layout_constraintStart_toEndOf="@id/star_icon"
                    app:layout_constraintTop_toTopOf="@id/star_icon" />

                <!-- Review Count -->
                <TextView
                    android:id="@+id/review_count"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/review_count"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textSize="14sp"
                    android:layout_marginTop="2dp"
                    app:layout_constraintStart_toStartOf="@id/rating_text"
                    app:layout_constraintTop_toBottomOf="@id/rating_text" />

                <!-- Chevron Icon -->
                <ImageView
                    android:id="@+id/chevron_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/desc_chev_icon"
                    android:src="@drawable/chevron_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/CustomTabLayout"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_marginHorizontal="@dimen/default_margin_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>